# RTOS_2024_APP

./: .gitignore  README.md
final_project/: CMakeLists.txt  sdkconfig  sdkconfig.old
final_project/main/: ADC_Driver.c  ADC_Driver.h  CMakeLists.txt  RGB.c  RGB.h  http_server.c  http_server.h  main.c  main.h  wifi_app.c  wifi_app.h
final_project/main/control_app/: BUZZER_control.c  BUZZER_control.h  FAN_control.c  FAN_control.h  RGB_control.c  RGB_control.h
final_project/main/webpage/: app.css  app.js  index.html
html_task/: sdkconfig  sdkconfig.old
html_task/main/: CMakeLists.txt  http_server.c  main.c  rgb.c  wifi_app.h
html_task/main/webpage/: app.css  app.js  index.html
project/: sdkconfig.old
project/main/: CMakeLists.txt  adc_lib.c  adc_lib.h  main.c  rgb.c  rgb.h  wifi_app.c  wifi_app.h
wifi_client/: sdkconfig  sdkconfig.old
wifi_client/main/: CMakeLists.txt  main.c  wifi_std.c  wifi_std.h
